# terminal-news

./: .gitignore  LICENSE  README.md  pyproject.toml
Terminal_news_feed/: README.md  terminal_news.py
Terminal_news_feed/core/: app.py  config.py
core/: cache.py  feeds.py  layout.py  system.py
