[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-news"
version = "0.1.0"
description = "Calm terminal-native news reader"
requires-python = ">=3.10"
dependencies = [
  "textual",
  "feedparser",
  "beautifulsoup4",
  "rich",
]

[project.scripts]
terminal-news = "core.app:main"

